# attach-xbe-builder

./: .gitignore  Cargo.toml  README.md  build.sh  cli.js  package.json  rollup.config.js
lib/: attach.js  fs.js  inject.js  xbe.js
src/: attach.rs  cli.rs  main.rs  util.rs  xbe.rs
